Start migrating to standalone and Changedetection

--- a/src/app/campaign/pages/location-page/location-page.component.html
+++ b/src/app/campaign/pages/location-page/location-page.component.html
@@ -5,6 +5,7 @@
     [location]="location"
     [locationServerModel]="store.locationServerModel()"
     [imageServerModel]="store.imageServerModel()"
+    [campaignCharacters]="store.campaignCharacters() ?? []"
     [canCreate]="store.hasWritePermission()"
     [canUpdate]="store.hasWritePermission()"
     [canDelete]="store.hasWritePermission()"
