--- a/src/design/organisms/formly-editor-field/formly-editor-field.component.html
+++ b/src/design/organisms/formly-editor-field/formly-editor-field.component.html
@@ -1,16 +1,13 @@
-<div class="mb-3 {{field.className}}" [class.d-none]="to.hidden">
-  <label 
-    class="form-label" 
-    [for]="to['name']"
-  >
-    {{to.label}}
-    
-    <ng-container *ngIf="to.required">
+<div class="mb-3 {{ field.className }}" [class.d-none]="to.hidden">
+  <label class="form-label" [for]="to['name']">
+    {{ to.label }}
+
+    @if (to.required) {
       *
-    </ng-container>
+    }
   </label>
-  
-  <editor 
+
+  <editor
     [attr.name]="to['name']"
     #textEditorElement
     [formControl]="formControl"
