--- a/src/design/templates/location-template/location-template.component.html
+++ b/src/design/templates/location-template/location-template.component.html
@@ -93,6 +93,7 @@
         [locations]="location().sublocations ?? []"
         [canCreate]="canCreate()"
         [campaignName]="location().campaign_details?.name!"
+        [campaignCharacters]="campaignCharacters()"
       ></app-location-accordion>
     </div>
 
