--- a/src/design/organisms/location/location.component.html
+++ b/src/design/organisms/location/location.component.html
@@ -1,21 +1,21 @@
 <h4 class="card__heading">
-  {{ location.name }}
+  {{ location().name }}
 </h4>
 
 <!-- Location -->
 <div class="card__text">
-  <app-html-text [text]="location.description"></app-html-text>
+  <app-html-text [text]="location().description"></app-html-text>
 </div>
 
 <app-separator></app-separator>
 <!-- List of Characters at this location -->
-<ng-container *ngIf="localCharacters.length > 0">
+@if (localCharacters().length > 0) {
   <div class="card__connections">
     <app-badge-list
-      [entries]="localCharacters"
+      [entries]="localCharacters()"
       [label]="'Local Characters'"
       [canCreate]="false"
       [canDelete]="false"
     ></app-badge-list>
   </div>
-</ng-container>     
+}
