--- a/src/design/organisms/ngx-leaflet-map/ngx-leaflet-map.component.html
+++ b/src/design/organisms/ngx-leaflet-map/ngx-leaflet-map.component.html
@@ -1,14 +1,13 @@
 <!-- Leaflet Map -->
-<ng-container *ngIf="options && layersControl && layers">
-  <div 
+@if (options && layersControl() && layers()) {
+  <div
     id="leafletMapDiv"
     leaflet
     [leafletOptions]="options"
-    [leafletLayersControl]="layersControl"
-    [leafletLayers]="layers"
+    [leafletLayersControl]="layersControl()"
+    [leafletLayers]="layers()"
     (leafletMapReady)="onMapReady($event)"
     (leafletClick)="onMapClick($event)"
     (leafletMouseMove)="onMouseMove($event)"
   ></div>
-</ng-container>
-
+}
